--- a/wp-content/themes/gcp-advisory/resources/styles/custom.css
+++ b/wp-content/themes/gcp-advisory/resources/styles/custom.css
@@ -1,10 +1,10 @@
 /* join GCP advisory form start */
 .zigzag-form form {
-  @apply max-w-[824px] w-full mx-auto px-20
+  @apply max-w-[824px] w-full mx-auto px-20 relative z-999;
 }
 
 .zigzag-form .ctm-row span {
-  @apply px-10 767:px-0;
+  @apply px-10 767:px-0 767:py-10;
 }
 
 .zigzag-form .ctm-row  {
@@ -100,7 +100,7 @@
 }
 
 .ctm-recaptch {
-  @apply flex flex-wrap flex-row-reverse items-center justify-center mt-20 gap-y-2 gap-x-5
+  @apply flex flex-wrap flex-row-reverse items-center justify-center mt-20 gap-y-2 gap-x-5 767:flex-col-reverse 767:gap-[20px];
 }
 
 .ctm-recaptch span {
@@ -125,14 +125,10 @@
  @apply !bg-transparent !p-0 !border-0
 }
 .zigzag-form .wpcf7-form .btn input.wpcf7-submit {
-  @apply font-700;
+  @apply font-700 cursor-pointer;
  }
 /* join GCP advisory form end */
 
-/* search box start */
-/* .search-box form {
-  @apply max-w-[400px] w-full ml-auto
-} */
 
 .search-box input {
   @apply bg-white bg-opacity-40 rounded-[30px] border-2 border-green-200 border-solid px-20 py-[7px] w-full pl-50 text-16 font-400 text-font placeholder:text-font;
